[package]
name = "agave-random"
description = "Agave randomization utils"
documentation = "https://docs.rs/agave-random"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "agave_random"

[features]
agave-unstable-api = []

[dependencies]
rand0_8_5 = { package = "rand", version = "0.8.5" }

[dev-dependencies]
assert_matches = { workspace = true }
bs58 = { workspace = true, features = ["alloc"] }
rand_chacha0_3_1 = { package = "rand_chacha", version = "0.3.1" }
sha2 = { workspace = true }
test-case = { workspace = true }
