[package]
name = "xtask"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
toml_edit = { version = "0.22.23", features = ["serde"] }
walkdir = "2"

[lints]
workspace = true
