[package]
name = "xtask"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.27", features = ["derive"] }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
octocrab = { workspace = true, features = ["stream"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml_edit = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-case = { workspace = true }
