[package]
name = "solana-rbpf-test-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
libc = { workspace = true }
solana-rbpf = { path = "../" }
