[package]
name = "solana-svm-test-harness-fixture"
description = "Solana SVM test harness fixture types."
documentation = "https://docs.rs/solana-svm-test-harness-fixture"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[features]
agave-unstable-api = []
dummy-for-ci-check = ["fuzz"]
fuzz = [
    "dep:bincode",
    "dep:prost",
    "dep:prost-build",
    "dep:protosol",
    "solana-pubkey/default",
]

[dependencies]
agave-feature-set = { workspace = true }
bincode = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
protosol = { workspace = true, optional = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-instruction-error = { workspace = true, features = ["serde"] }
solana-pubkey = { workspace = true }
solana-stable-layout = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = { workspace = true, optional = true }

[lints]
workspace = true
